--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -8,6 +8,8 @@ input::placeholder {
     font-size: 15px;
 }
 
+/* Fonts and backgrounds */
+
 p, h1, h2, h3, h4, button {
     font-family: "Roboto", "Helvetica", sans-serif;
 }
@@ -17,44 +19,9 @@ p, h1, h2, h3, h4, button {
     color: white;
 }
 
-.background-green {
-    background-color: #367340;
-}
-
 .background-cosmic-latte {
     background-color: #F8F4E3;
 }
 
-.background-gray {
-    background-color: #B1B1B1;
-}
 
-/*
-.form-container {
-    display: grid;
-    gap: 5px;  
-}
-
-.form-group label {
-    text-align: right;
-}
-*/
-
-
-
-
-/* Desktop View */
-
-@media all and (min-width: 800px) {
-
-/* Full height of screen for nav bar and other elements */
-
-html, body {
-    height: 100%;
-}
-
-.full-height {
-    height: 100%;
-}
-}
 
